cabal-version:      2.4
name:               atcoder-env
version:            0.1.0.0

executable atcoder-env-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  build-depends:
      base >=4.16 && <5,
      ac-library-hs,
      vector,
      containers,
      massiv,
      mtl,
      text